--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
 </head>
 <body>
     <script>
+        // Record the current timestamp
+        const startTime = new Date().getTime();
+
         // Try to open the app using the schema
         window.location = "HdfcNowApp://";
 
-        // Fallback to the App Store after a short delay
+        // Check after 1.5 seconds (adjust as needed) if the app was opened
         setTimeout(function() {
-            window.location = "https://apps.apple.com/in/app/hdfc-bank-app-invite-only/id6504402552";
-        }, 2000); // Adjust the delay (in milliseconds) as needed
+            const elapsedTime = new Date().getTime() - startTime;
+
+            // If time elapsed indicates the app didn't open, redirect to App Store
+            if (elapsedTime < 1500) { // App didn't open (timeout too short)
+                window.location = "https://apps.apple.com/in/app/hdfc-bank-app-invite-only/id6504402552";
+            }
+        }, 1000); // Adjust timeout based on app loading times
     </script>
     <p>If you are not redirected, <a href="https://apps.apple.com/in/app/hdfc-bank-app-invite-only/id6504402552">click here</a>.</p>
 </body>
