--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
 </head>
 <body>
     <script>
-        // Record the current timestamp
+        // Start the timer when the link is clicked
         const startTime = new Date().getTime();
 
         // Try to open the app using the schema
         window.location = "HdfcNowApp://";
 
-        // Redirect to the App Store after 1.5 seconds if the app was not opened
+        // Set a fallback to App Store if the app doesn't open within 1.5 seconds
         const fallbackTimeout = setTimeout(function() {
             const elapsedTime = new Date().getTime() - startTime;
-
-            // If the elapsed time is small, the app likely didn't open
+            // If the app doesn't open in the expected time window
             if (elapsedTime < 1500) {
                 window.location = "https://apps.apple.com/in/app/hdfc-bank-app-invite-only/id6504402552";
             }
-        }, 1500);
+        }, 1500); // Adjust timeout (in milliseconds) based on your needs
 
-        // Cancel the fallback if the user navigates away (e.g., app opened)
+        // Clear the timeout if the app is successfully opened (when focus is lost from the page)
         window.addEventListener("blur", function() {
             clearTimeout(fallbackTimeout);
         });
