--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
 </head>
 <body>
     <script>
-        // Record the current timestamp when the page loads
+        // Record the current timestamp to calculate elapsed time
         const startTime = new Date().getTime();
 
-        // Try to open the app using the schema
-        window.location = "HdfcNowApp://";
+        // Create an invisible iframe to open the app without triggering "invalid address"
+        var iframe = document.createElement("iframe");
+        iframe.style.display = "none";
+        iframe.src = "HdfcNowApp://"; // Custom URL scheme for the app
+        document.body.appendChild(iframe);
 
         // Set a fallback to App Store if the app doesn't open within 1.5 seconds
         const fallbackTimeout = setTimeout(function() {
             const elapsedTime = new Date().getTime() - startTime;
-            // If the app isn't opened (i.e., if elapsed time < 1500ms), redirect to App Store
+            // If elapsed time is less than the expected time, redirect to App Store
             if (elapsedTime < 1500) {
                 window.location = "https://apps.apple.com/in/app/hdfc-bank-app-invite-only/id6504402552";
             }
-        }, 1500); // Adjust timeout (in milliseconds)
+        }, 1500); // Timeout set to 1500 milliseconds (1.5 seconds)
 
         // Cancel the timeout if the app opens (when focus is lost from the page)
         window.addEventListener("blur", function() {
