--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Open HDFC Bank App</title>
+  <title>Open HDFC Bank App</title>
 </head>
 <body>
-    <script>
-        // Start the timer when the link is clicked
-        const startTime = new Date().getTime();
+  <script>
+    function openApp() {
+      const appScheme = "HdfcNowApp://";
+      const appStoreURL = "https://apps.apple.com/in/app/hdfc-bank-app-invite-only/id6504402552";
+      const timeout = 2000; // Wait for 2 seconds
 
-        // Try to open the app using the schema
-        window.location = "HdfcNowApp://";
+      // Attempt to open the app
+      window.location.href = appScheme;
 
-        // Set a fallback to App Store if the app doesn't open within 1.5 seconds
-        const fallbackTimeout = setTimeout(function() {
-            const elapsedTime = new Date().getTime() - startTime;
-            // If the app doesn't open in the expected time window
-            if (elapsedTime < 1500) {
-                window.location = "https://apps.apple.com/in/app/hdfc-bank-app-invite-only/id6504402552";
-            }
-        }, 1500); // Adjust timeout (in milliseconds) based on your needs
+      // Set a timeout to check if the app is likely open
+      setTimeout(function() {
+        if (document.visibilityState === 'hidden') {
+          // App likely opened, no need for further action
+        } else {
+          // App likely not opened within the timeout, redirect to App Store
+          console.error("App may not be installed or open");
+          window.location.href = appStoreURL;
+        }
+      }, timeout);
+    }
 
-        // Clear the timeout if the app is successfully opened (when focus is lost from the page)
-        window.addEventListener("blur", function() {
-            clearTimeout(fallbackTimeout);
-        });
-    </script>
-    <p>If you are not redirected, <a href="https://apps.apple.com/in/app/hdfc-bank-app-invite-only/id6504402552">click here</a>.</p>
+    window.onload = openApp;
+  </script>
+  <p>If the app does not open, <a href="https://apps.apple.com/in/app/hdfc-bank-app-invite-only/id6504402552">click here</a>.</p>
 </body>
 </html>
