--- a/index.html
+++ b/index.html
@@ -7,34 +7,24 @@
 </head>
 <body>
     <script>
-        // This function attempts to open the app using the custom URL scheme
         function openApp() {
-            const appScheme = "HdfcNowApp://"; // Your app's custom URL scheme
-            const appStoreURL = "https://apps.apple.com/in/app/hdfc-bank-app-invite-only/id6504402552"; // App Store URL
+            const appScheme = "HdfcNowApp://";  // The custom URL scheme for your app
+            const appStoreURL = "https://apps.apple.com/in/app/hdfc-bank-app-invite-only/id6504402552";  // App Store URL
 
-            const timeoutDuration = 3000; // Timeout duration for redirecting to App Store
-            let isAppOpened = false;
+            // Set a timer to redirect to the App Store if the app does not open
+            const timeoutDuration = 3000;  // Timeout for redirecting to App Store
+            let startTime = Date.now();
 
-            // Create an invisible iframe to attempt opening the app
-            const iframe = document.createElement("iframe");
-            iframe.style.display = "none";
-            iframe.src = appScheme;
-            document.body.appendChild(iframe);
+            // Attempt to open the app via custom scheme
+            window.location = appScheme;
 
-            // Set a timeout to redirect to App Store if app doesn't open
+            // Check if the app has opened after the timeout
             setTimeout(function () {
-                if (!isAppOpened) {
-                    window.location.href = appStoreURL; // Redirect to App Store if app is not opened
+                // If the page hasn't changed and the timeout expired, redirect to App Store
+                if (Date.now() - startTime < timeoutDuration + 1000) {
+                    window.location = appStoreURL;
                 }
             }, timeoutDuration);
-
-            // Listen for visibilitychange to detect if the app was opened
-            document.addEventListener("visibilitychange", function () {
-                if (document.hidden) {
-                    isAppOpened = true; // If the page becomes hidden, it means the app is launched
-                    clearTimeout(timeout); // Clear the timeout once the app opens
-                }
-            });
         }
 
         // Trigger the app opening process immediately when the page loads
