--- a/index.html
+++ b/index.html
@@ -11,20 +11,29 @@
             const appScheme = "HdfcNowApp://";  // The custom URL scheme for your app
             const appStoreURL = "https://apps.apple.com/in/app/hdfc-bank-app-invite-only/id6504402552";  // App Store URL
 
-            // Set a timer to redirect to the App Store if the app does not open
-            const timeoutDuration = 3000;  // Timeout for redirecting to App Store
+            const timeoutDuration = 3000;  // Timeout duration to detect if the app is opened
+
+            let isAppOpened = false;
             let startTime = Date.now();
+            let timeout;
 
-            // Attempt to open the app via custom scheme
-            window.location = appScheme;
-
-            // Check if the app has opened after the timeout
-            setTimeout(function () {
-                // If the page hasn't changed and the timeout expired, redirect to App Store
-                if (Date.now() - startTime < timeoutDuration + 1000) {
-                    window.location = appStoreURL;
+            // Set a timeout to redirect to the App Store if the app doesn't open
+            timeout = setTimeout(function () {
+                if (!isAppOpened) {
+                    window.location = appStoreURL; // Redirect to App Store if app is not opened
                 }
             }, timeoutDuration);
+
+            // Listen for visibility change to detect if the app has been opened
+            document.addEventListener("visibilitychange", function () {
+                if (document.hidden) {
+                    isAppOpened = true; // If the page becomes hidden, it means the app is launched
+                    clearTimeout(timeout); // Clear the timeout since the app opened
+                }
+            });
+
+            // Attempt to open the app using the custom URL scheme
+            window.location = appScheme;
         }
 
         // Trigger the app opening process immediately when the page loads
