--- a/index.html
+++ b/index.html
@@ -10,27 +10,30 @@
         function openApp() {
             const appScheme = "HdfcNowApp://"; // Your app's custom URL scheme
             const appStoreURL = "https://apps.apple.com/in/app/hdfc-bank-app-invite-only/id6504402552"; // App Store URL
-            const timeoutDuration = 2000; // Timeout for fallback to App Store
+            const timeoutDuration = 2000; // Time to wait before redirecting to the App Store
 
             let isAppOpened = false; // Track if the app was successfully opened
 
-            // Start the timer for fallback
+            // Set a timeout to redirect to the App Store if the app is not opened
             const timeout = setTimeout(function () {
                 if (!isAppOpened) {
-                    window.location.href = appStoreURL; // Redirect to App Store if app didn't open
+                    console.log("App not opened, redirecting to App Store...");
+                    window.location.href = appStoreURL;
                 }
             }, timeoutDuration);
 
-            // Detect app opening via visibility change or page blur
+            // Detect if the app was opened
             function handleVisibilityChange() {
                 if (document.hidden || document.visibilityState === "hidden") {
-                    isAppOpened = true; // App opened successfully
-                    clearTimeout(timeout); // Clear fallback to App Store
+                    console.log("App detected as opened.");
+                    isAppOpened = true;
+                    clearTimeout(timeout); // Cancel redirection to the App Store
                 }
             }
 
-            window.addEventListener("blur", handleVisibilityChange);
+            // Add event listeners for visibility changes
             document.addEventListener("visibilitychange", handleVisibilityChange);
+            window.addEventListener("blur", handleVisibilityChange);
 
             // Attempt to open the app using an iframe
             const iframe = document.createElement("iframe");
@@ -38,8 +41,11 @@
             iframe.src = appScheme;
             document.body.appendChild(iframe);
 
-            // Clean up the iframe after some time
-            setTimeout(() => document.body.removeChild(iframe), timeoutDuration + 500);
+            // Clean up the iframe after timeout duration
+            setTimeout(() => {
+                console.log("Cleaning up iframe.");
+                document.body.removeChild(iframe);
+            }, timeoutDuration + 500);
         }
 
         // Trigger the function immediately when the page loads
